<resources>
    <string name="app_name">Grupo11</string>
    <string name="txt_jugar">PLAY</string>
    <string name="txt_perfil">PROFILE</string>
    <string name="txt_ajustes">CONFIG</string>
    <string name="txt_acerca_de">ABOUT</string>
    <string name="txt_click_jugar">I have pressed the play button</string>
    <string name="txt_click_perfil">I have pressed the perfil button</string>
    <string name="txt_click_ajustes">I have presses the ajustes button</string>
    <string name="txt_click_acerca_de">I have presses the acerca de button</string>
    <string name="txt_usuario">User</string>
    <string name="txt_contrasena">Password</string>
    <string name="txt_iniciar_sesion">Sign in</string>
    <string name="txt_registro">Sign up</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_olvidaste">Forgot your password?</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="our">Our terms and Conditions</string>
    <string name="returned">Return to the registration</string>
    <string-array name="categorias">
        <item>Electrodomesticos</item>
        <item>Celulares</item>
        <item>Gaming</item>
    </string-array>
    <string name="select">Select Image</string>
    <string name="upload">Upload Image</string>
    <string name="terms">Terms and Conditions</string>
    <string name="content_terms">Through Law 1581 of 2012 and Decree 1377 of 2013, it is established that all users of any application in cyberspace have the opportunity to know, delete, update and rectify all types of personal data collected, stored or that have been subject to treatment in databases in public and private entities.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa">Map</string>
</resources>