<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.prueba10.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.prueba10.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.prueba10.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.prueba10.ProductoFragment"
        android:label="Product"
        tools:layout="@layout/fragment_producto" />
    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.prueba10.ui.favorite.Fav"
        android:label="Favorite"
        tools:layout="@layout/fav_fragment" />
    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.prueba10.ui.Shopping.Shopping"
        android:label="Shopping Cart"
        tools:layout="@layout/shopping_fragment" />
</navigation>